--- a/css/PostAlgorithm.css
+++ b/css/PostAlgorithm.css
@@ -3,6 +3,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 body, html {
   height: 100%;
   line-height: 1.8;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #FF0000;
 }
 .w3-bar .w3-button {
   padding: 16px;
