--- a/src/css/PostAlgorithm.css
+++ b/src/css/PostAlgorithm.css
@@ -14,90 +14,99 @@ body, html {
 ::-webkit-scrollbar-thumb {
   background: #FF0000;
 }
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+
+body, html {
+  height: 100%;
+  line-height: 1.8;
+}
 .w3-bar .w3-button {
   padding: 16px;
 }
-.topnav {
+/* Navbar container */
+.navbar {
   overflow: hidden;
   background-color: black;
+  font-family: Arial;
 }
 
-.topnav a {
+/* Links inside the navbar */
+.navbar a {
   float: left;
-  display: block;
-  color: black;
+  font-size: 16px;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+}
+/* Navbar container */
+.navbar {
+  overflow: hidden;
+  background-color: black;
+  font-family: Arial;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 16px;
   color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.topnav .search-container {
-  float: right;
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
   border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
 }
 
-.topnav .search-container button {
-  float: right;
-  padding: 6px 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
-    #allOptions div{
-            font-size: 50px;
-        }
-
-        #allOptions a{
-            text-decoration: none;
-            color: black;
-        }
-.topnav .search-container button:hover {
-  background: #ccc;
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #DAA520;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
-  }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 29px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;  
-  }
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: black;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
-    /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-.row.content {height: 1500px}
-    
-    /* Set gray background color and 100% height */
-.sidenav {
-  background-color: #f1f1f1;
-  height: 100%;
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color:#DAA520;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
     
 /* Set black background color, white text and some padding */
