--- a/src/css/drawing.css
+++ b/src/css/drawing.css
@@ -271,6 +271,57 @@ body {
 }
 
 .pen-size {
-  cursor: pointer;
   margin-left: 10px;
+  -webkit-appearance: none;
+  height: 15px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.pen-size::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: rgb(31, 128, 238);
+  cursor: pointer;
+}
+
+.pen-size::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 833px) {
+  .underbar div {
+    width: 20px;
+    height: 20px;
+    border: 1px solid white;
+  }
+
+  .clear {
+    margin-left: 5px;
+    width: 75px;
+    height: 25px;
+    border-radius: 25px;
+    margin-top: 40px;
+    font-size: 10px;
+  }
+
+  .custom-color {
+    width: 30px;
+    height: 15px;
+  }
+
+  .pen-size {
+    width: 75px;
+  }
 }
